fix: app.mjs to use environment variables, removed config.json, and updated vercel.json

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,10 @@
 {
   "version": 2,
-  "builds": [{ "src": "app.mjs", "use": "@now/node" }],
+  "builds": [
+    {
+      "src": "app.mjs",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [{ "src": "/(.*)", "dest": "app.mjs" }]
 }
